Wrapped main card in div, scaled it down

--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" media="all" />
     <title>Order Summary</title>
-</head>
-<body>
-    <section>
+  </head>
+  <body>
+    <div class="container">
+      <section>
         <div class="order">
-            <img src="images/illustration-hero.svg" alt="woman listening to music" class="hero"/>
-            <h1>Order Summary</h1>
-            <p>You can now listen to millions of songs, audiobooks, and podcasts on any device, anywhere you like!
-            </p>
+          <img
+            src="images/illustration-hero.svg"
+            alt="woman listening to music"
+            class="hero"
+          />
+          <h1>Order Summary</h1>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device, anywhere you like!
+          </p>
         </div>
         <div class="payment-plan">
-            <article>
-                <img src="images/icon-music.svg" alt="music icon" />
-                <div>
-                    <h2>Annual Plan</h2>
-                    <p>$59.99/year</p>
-                </div>
-            </article>
-            <button class="btn btn-change">Change</button>
+          <article>
+            <img src="images/icon-music.svg" alt="music icon" />
+            <div>
+              <h2>Annual Plan</h2>
+              <p>$59.99/year</p>
+            </div>
+          </article>
+          <button class="btn btn-change">Change</button>
         </div>
 
         <div class="proceed">
-            <button class= "btn btn-proceed">Proceed to Payment</button>
-            <button class= "btn btn-cancel">Cancel Order</button>
+          <button class="btn btn-proceed">Proceed to Payment</button>
+          <button class="btn btn-cancel">Cancel Order</button>
         </div>
-    </section>
-</body>
+      </section>
+    </div>
+  </body>
 </html>
